--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="red">#C52F2F</color>
+    <color name="orange">#C55C2B</color>
+    <color name="yellow">#B69E28</color>
+    <color name="lightgreen">#C3DC7F</color>
+    <color name="green">#336C1A</color>
 </resources>
