--- a/app/src/main/res/layout/symptom_layout.xml
+++ b/app/src/main/res/layout/symptom_layout.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SymptomPage"
     android:orientation="vertical"
-    android:background="@drawable/lily">
+    tools:context=".SymptomPage">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha=".7"
+        android:background="@drawable/lily"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/date"
@@ -53,8 +63,8 @@
         android:layout_marginTop="25dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Comments"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/linear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,8 +78,7 @@
         app:layout_constraintBottom_toTopOf="@+id/submit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/comments"
-        >
+        app:layout_constraintTop_toBottomOf="@id/comments">
 
 
         <ImageButton
@@ -86,16 +95,16 @@
             android:src="@drawable/custom_button" />
 
         <ImageButton
-            android:background="@null"
             android:id="@+id/selectColor2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:src="@drawable/custom_button_2"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
             android:layout_centerHorizontal="true"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:layout_weight="0.2"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:scaleType="fitXY"
+            android:src="@drawable/custom_button_2" />
 
 
         <ImageButton
@@ -103,12 +112,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
             android:layout_weight="0.2"
             android:adjustViewBounds="true"
             android:background="@null"
             android:scaleType="fitXY"
-            android:src="@drawable/custom_button_3"
-            android:layout_marginLeft="20dp"/>
+            android:src="@drawable/custom_button_3" />
 
         <ImageButton
             android:id="@+id/selectColor4"
@@ -126,13 +135,13 @@
             android:id="@+id/selectColor5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
             android:layout_weight="0.2"
-            android:src="@drawable/custom_button_5"
             android:adjustViewBounds="true"
             android:background="@null"
             android:scaleType="fitXY"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="20dp"/>
+            android:src="@drawable/custom_button_5" />
 
     </LinearLayout>
 
@@ -151,7 +160,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/linear" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
