--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="red">#C52F2F</color>
     <color name="orange">#C55C2B</color>
-    <color name="yellow">#B69E28</color>
-    <color name="lightgreen">#C3DC7F</color>
+    <color name="yellow">#CAB344</color>
+    <color name="lightgreen">#AECA64</color>
     <color name="green">#336C1A</color>
 </resources>
