--- a/app/src/main/res/layout/symptom_layout.xml
+++ b/app/src/main/res/layout/symptom_layout.xml
@@ -49,7 +49,9 @@
         android:layout_marginTop="18dp"
         android:layout_marginEnd="116dp"
         android:layout_marginBottom="32dp"
+        android:background="#D8609550"
         android:text="Edit Symptoms"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/comments"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +157,9 @@
         android:layout_centerVertical="true"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="16dp"
+        android:background="#D8609550"
         android:text="Submit"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
